tests-trybuild/tests/riscv-rt/entry/fail_async.stderr
error: `#[entry]` function signature must be `[unsafe] fn([usize[, usize[, usize]]]) -> !`
 --> tests/riscv-rt/entry/fail_async.rs:2:1
  |
2 | async fn entry_point() {}
  | ^^^^^
