tests-trybuild/tests/riscv-rt/entry/fail_async.rs
#[riscv_rt::entry]
async fn entry_point() {}

fn main() {}
